Bug 828367 - APZC should not perform scrolling if BES detects panning distance is too small. r=cjones.