gfx/layers/ipc/AsyncPanZoomController.cpp
@@ -1421,7 +1421,7 @@ void AsyncPanZoomController::ContentReceivedTouch(bool aPreventDefault) {
 
     while (!mTouchQueue.IsEmpty()) {
       // we need to reset mDelayPanning before handling scrolling gesture.
-      if (mTouchQueue[0].mType == MultiTouchInput::MULTITOUCH_MOVE) {
+      if (!aPreventDefault && mTouchQueue[0].mType == MultiTouchInput::MULTITOUCH_MOVE) {
         mDelayPanning = false;
       }
       if (!aPreventDefault) {
